# supacrawler-py

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_tests.py
examples/: crawl.ipynb  guide_crawl_endpoint.ipynb  guide_screenshots_endpoint.ipynb  jobs.ipynb  langchain_vectors.ipynb  llamaindex.ipynb  (+7 more)
src/supacrawler/: README.md  __init__.py  client.py  pyproject.toml  types.py
src/supacrawler/scraper_client/: __init__.py
src/supacrawler/scraper_client/api/health/: get_internal_health.py
src/supacrawler/scraper_client/api/jobs/: get_v_1_crawl_job_id.py  post_v1_crawl.py
src/supacrawler/scraper_client/api/parse/: get_v1_parse_examples.py  get_v1_parse_templates.py  post_v1_parse.py
src/supacrawler/scraper_client/api/scrape/: get_v1_scrape.py
src/supacrawler/scraper_client/api/screenshots/: get_v1_screenshots.py  post_v1_screenshots.py
src/supacrawler/scraper_client/models/: __init__.py  crawl_create_request.py  crawl_create_request_format.py  crawl_create_request_proxy_mode.py  crawl_create_request_webhook_headers.py  crawl_create_response.py  crawl_job_data.py  crawl_job_data_crawl_data.py  crawl_job_data_error_data.py  crawl_statistics.py  crawl_status_response.py  crawl_status_response_status.py  error.py  get_v1_scrape_format.py  get_v1_scrape_proxy_mode.py  page_content.py  page_metadata.py  parse_create_request.py  parse_create_request_output_format.py  parse_create_request_schema.py  parse_examples_response.py  parse_examples_response_examples.py  parse_examples_response_examples_additional_property.py  parse_response.py  parse_response_partial_results_item.py  parse_response_workflow_status.py  parse_templates_response.py  parse_templates_response_templates.py  parse_validation_result.py  parse_validation_result_format.py  scrape_metadata.py  scrape_response.py  screenshot_create_request.py  screenshot_create_request_block_resources_item.py  screenshot_create_request_cookies_item.py  screenshot_create_request_device.py  screenshot_create_request_format.py  screenshot_create_request_headers.py  screenshot_create_request_wait_until.py  screenshot_get_response.py  (+5 more)
(+14 files in other folders)
