[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supacrawler-py"
version = "0.1.0"
description = "Typed Python SDK for Supacrawler API (scrape, jobs, screenshots, watch)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Supacrawler", email = "support@supacrawler.com" }
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.6.0"
]

[project.urls]
Homepage = "https://supacrawler.com"
Repository = "https://supacrawler.com"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]